--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -171,7 +171,7 @@
 
         <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
           <div class="col-lg-7">
-            <h5>Products</h5>
+            <h5>{{'menu.product' | translate}}</h5>
             <span class="btn btn-outline-dark" (click)="current.products = []">{{'common.action.clearselection'|translate}}</span>
             <div class="col-lg-12 row selected-product-header">
                 <div class="col-lg-1"></div>
