--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -18,7 +18,7 @@
 
 <ng-template #content let-c="close" let-d="dismiss" class="col-lg-12">
     <div class="modal-header col-lg-12">
-        <h4 class="modal-title" id="modal-basic-title">New Profile</h4>
+      <h4 class="modal-title" id="modal-basic-title">{{'page.profile.new'|translate}}</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -26,7 +26,7 @@
     <div class="col-lg-12 row">
       <div class="col-lg-4">
         <fieldset>
-          <legend>General</legend>
+          <legend>{{'page.profile.general'|translate}}</legend>
           <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
           <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.lastname"></div>
           <div class="col-lg-12"><label>Mail </label><input class="form-control" type="email" [(ngModel)]="newInvoiceProfile.mail"></div>
@@ -43,7 +43,7 @@
       </div>
       <div class="col-lg-4">
         <fieldset>
-          <legend>Address</legend>
+          <legend>{{'page.profile.address'|translate}}</legend>
           
           <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.street"></div>
           <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.streetNumber"></div>
@@ -90,7 +90,7 @@
     <div class="col-lg-12 row">
       <div class="col-lg-4">
         <fieldset>
-          <legend>General</legend>
+          <legend>{{'page.profile.general'|translate}}</legend>
   
           <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.firstname"></div>
           <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.lastname"></div>
@@ -109,7 +109,7 @@
       </div>
       <div class="col-lg-4">
         <fieldset>
-          <legend>Address</legend>
+          <legend>{{'page.profile.address'|translate}}</legend>
           
           <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.street"></div>
           <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.streetNumber"></div>
