--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -27,29 +27,53 @@
       <div class="col-lg-4">
         <fieldset>
           <legend>{{'page.profile.general'|translate}}</legend>
-          <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
-          <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.lastname"></div>
-          <div class="col-lg-12"><label>Mail </label><input class="form-control" type="email" [(ngModel)]="newInvoiceProfile.mail"></div>
-          <div class="col-lg-12"><label>Phone </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.phoneNumber"></div>
-          <div class="col-lg-12"><label>VAT </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.vat"></div>
-          <div class="col-lg-12"><label>Account N° </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.accountNumber"></div>
+          <div class="col-lg-12"><label>{{'common.firstname'|translate}} </label><input class="form-control" type="text"
+                                                                                        [(ngModel)]="newInvoiceProfile.firstname">
+          </div>
+          <div class="col-lg-12"><label>{{'common.lastname'|translate}} </label><input class="form-control" type="text"
+                                                                                       [(ngModel)]="newInvoiceProfile.lastname">
+          </div>
+          <div class="col-lg-12"><label>{{'common.mail'|translate}} </label><input class="form-control" type="email"
+                                                                                   [(ngModel)]="newInvoiceProfile.mail">
+          </div>
+          <div class="col-lg-12"><label>{{'common.phone'|translate}} </label><input class="form-control" type="text"
+                                                                                    [(ngModel)]="newInvoiceProfile.phoneNumber">
+          </div>
+          <div class="col-lg-12"><label>{{'common.vat'|translate}} </label><input class="form-control" type="text"
+                                                                                  [(ngModel)]="newInvoiceProfile.vat">
+          </div>
+          <div class="col-lg-12"><label>{{'common.accountNumber'|translate}} </label><input class="form-control"
+                                                                                            type="text"
+                                                                                            [(ngModel)]="newInvoiceProfile.accountNumber">
+          </div>
           <div class="col-lg-12 form-check-inline">
             <input class="form-check-input" id="newActiveProfile" type="checkbox" [(ngModel)]="newInvoiceProfile.active">
-            <label class="form-check-label" for="newActiveProfile">active profile?</label>
+            <label class="form-check-label" for="newActiveProfile">{{'page.profile.active'|translate}}</label>
             <input class="form-check-input" id="isNewCustomer" type="checkbox" [(ngModel)]="newInvoiceProfile.customer">
-            <label class="form-check-label" for="isNewCustomer">customer profile?</label>
+            <label class="form-check-label" for="isNewCustomer">{{'page.profile.customer'|translate}}</label>
           </div>
         </fieldset>
       </div>
       <div class="col-lg-4">
         <fieldset>
           <legend>{{'page.profile.address'|translate}}</legend>
-          
-          <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.street"></div>
-          <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.streetNumber"></div>
-          <div class="col-lg-12"><label>City </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.city"></div>
-          <div class="col-lg-12"><label>Postcode </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.postcode"></div>
-          <div class="col-lg-12"><label>Country </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.country"></div>
+
+          <div class="col-lg-12"><label>{{'common.street'|translate}} </label><input class="form-control" type="text"
+                                                                                     [(ngModel)]="newInvoiceProfile.address.street">
+          </div>
+          <div class="col-lg-12"><label>{{'common.streetNumber'|translate}} </label><input class="form-control"
+                                                                                           type="text"
+                                                                                           [(ngModel)]="newInvoiceProfile.address.streetNumber">
+          </div>
+          <div class="col-lg-12"><label>{{'common.city'|translate}} </label><input class="form-control" type="text"
+                                                                                   [(ngModel)]="newInvoiceProfile.address.city">
+          </div>
+          <div class="col-lg-12"><label>{{'common.postcode'|translate}} </label><input class="form-control" type="text"
+                                                                                       [(ngModel)]="newInvoiceProfile.address.postcode">
+          </div>
+          <div class="col-lg-12"><label>{{'common.country'|translate}} </label><input class="form-control" type="text"
+                                                                                      [(ngModel)]="newInvoiceProfile.address.country">
+          </div>
         </fieldset>
       </div>
       <div class="col-lg-4">
@@ -58,14 +82,15 @@
           <div class="col-lg-12 row">
             <div  *ngIf="!newInvoiceProfile.logo" class="col-lg-12">
               <svg width="100%" height="100%" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
-                  <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
+                <text x="27%" y="50%" fill="#999" style="font-weight: bold">{{'common.yourLogo'|translate}}</text>
               </svg>
             </div>
             <div *ngIf="newInvoiceProfile.logo && newInvoiceProfile.logo.id" class="col-lg-12">
               <img *ngIf="newInvoiceProfile.logo" [src]="getLogo(newInvoiceProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
-              <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
+              <label *ngIf="!loadingLogo" class="btn btn-success"
+                     for="logo">{{'common.action.change'|translate}}</label>
               <div *ngIf="loadingLogo" class="progress">
                 <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -76,13 +101,15 @@
       </div>
     </div>
     <div class="modal-footer col-lg-12">
-        <button  (click)="save(newInvoiceProfile)" type="button" class="btn btn-outline-secondary  new-invoice">Save profile</button>
+      <button (click)="save(newInvoiceProfile)" type="button" class="btn btn-outline-secondary  new-invoice">
+        {{'common.action.save'|translate}}
+      </button>
     </div>
 </ng-template>
 
 <ng-template #contentEdit let-c="close" let-d="dismiss" class="col-lg-12">
     <div class="modal-header col-lg-12">
-        <h4 class="modal-title" id="modal-basic-title">Edit Profile</h4>
+      <h4 class="modal-title" id="modal-basic-title">{{'common.action.edit'|translate}}</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -91,18 +118,31 @@
       <div class="col-lg-4">
         <fieldset>
           <legend>{{'page.profile.general'|translate}}</legend>
-  
-          <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.firstname"></div>
-          <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.lastname"></div>
-          <div class="col-lg-12"><label>Mail </label><input class="form-control" type="mail" [(ngModel)]="currentProfile.mail"></div>
-          <div class="col-lg-12"><label>Phone </label><input class="form-control" type="text" [(ngModel)]="currentProfile.phoneNumber"></div>
-          <div class="col-lg-12"><label>VAT </label><input class="form-control" type="text" [(ngModel)]="currentProfile.vat"></div>
-          <div class="col-lg-12"><label>Account N° </label><input class="form-control" type="text" [(ngModel)]="currentProfile.accountNumber"></div>
+
+          <div class="col-lg-12"><label>{{'common.firstname'|translate}} </label><input class="form-control" type="text"
+                                                                                        [(ngModel)]="currentProfile.firstname">
+          </div>
+          <div class="col-lg-12"><label>{{'common.lastname'|translate}} </label><input class="form-control" type="text"
+                                                                                       [(ngModel)]="currentProfile.lastname">
+          </div>
+          <div class="col-lg-12"><label>{{'common.mail'|translate}} </label><input class="form-control" type="mail"
+                                                                                   [(ngModel)]="currentProfile.mail">
+          </div>
+          <div class="col-lg-12"><label>{{'common.phone'|translate}} </label><input class="form-control" type="text"
+                                                                                    [(ngModel)]="currentProfile.phoneNumber">
+          </div>
+          <div class="col-lg-12"><label>{{'common.vat'|translate}} </label><input class="form-control" type="text"
+                                                                                  [(ngModel)]="currentProfile.vat">
+          </div>
+          <div class="col-lg-12"><label>{{'common.accountNumber'|translate}} </label><input class="form-control"
+                                                                                            type="text"
+                                                                                            [(ngModel)]="currentProfile.accountNumber">
+          </div>
           <div class="col-lg-12 form-check-inline">
             <input class="form-check-input" id="editActiveProfile" type="checkbox" [(ngModel)]="currentProfile.active">
-            <label class="form-check-label" for="editActiveProfile">active profile?</label>
+            <label class="form-check-label" for="editActiveProfile">{{'page.profile.active'|translate}}</label>
             <input class="form-check-input" id="isEditCustomer" type="checkbox" [(ngModel)]="currentProfile.customer">
-            <label class="form-check-label" for="isEditCustomer">customer profile?</label>
+            <label class="form-check-label" for="isEditCustomer">{{'page.profile.customer'|translate}}</label>
           </div>
 
         </fieldset>
@@ -110,12 +150,23 @@
       <div class="col-lg-4">
         <fieldset>
           <legend>{{'page.profile.address'|translate}}</legend>
-          
-          <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.street"></div>
-          <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.streetNumber"></div>
-          <div class="col-lg-12"><label>City </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.city"></div>
-          <div class="col-lg-12"><label>Postcode </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.postcode"></div>
-          <div class="col-lg-12"><label>Country </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.country"></div>
+
+          <div class="col-lg-12"><label>{{'common.street'|translate}} </label><input class="form-control" type="text"
+                                                                                     [(ngModel)]="currentProfile.address.street">
+          </div>
+          <div class="col-lg-12"><label>{{'common.streetNumber'|translate}} </label><input class="form-control"
+                                                                                           type="text"
+                                                                                           [(ngModel)]="currentProfile.address.streetNumber">
+          </div>
+          <div class="col-lg-12"><label>{{'common.city'|translate}} </label><input class="form-control" type="text"
+                                                                                   [(ngModel)]="currentProfile.address.city">
+          </div>
+          <div class="col-lg-12"><label>{{'common.postcode'|translate}} </label><input class="form-control" type="text"
+                                                                                       [(ngModel)]="currentProfile.address.postcode">
+          </div>
+          <div class="col-lg-12"><label>{{'common.country'|translate}} </label><input class="form-control" type="text"
+                                                                                      [(ngModel)]="currentProfile.address.country">
+          </div>
         </fieldset>
       </div>
       <div class="col-lg-4">
@@ -124,14 +175,15 @@
           <div class="col-lg-12 row">
             <div *ngIf="!currentProfile.logo" class="col-lg-12">
               <svg width="100%" height="100%" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
-                  <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
+                <text x="27%" y="50%" fill="#999" style="font-weight: bold">{{'common.yourLogo'|translate}}</text>
               </svg>
             </div>
             <div *ngIf="currentProfile.logo && currentProfile.logo.id" class="col-lg-12">
               <img *ngIf="currentProfile.logo"  [src]="getLogo(currentProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
-              <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
+              <label *ngIf="!loadingLogo" class="btn btn-success"
+                     for="logo">{{'common.action.change'|translate}}</label>
               <div *ngIf="loadingLogo" class="progress">
                 <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -142,6 +194,8 @@
       </div>
     </div>
     <div class="modal-footer col-lg-12">
-        <button  (click)="save(currentProfile)" type="button" class="btn btn-outline-secondary  new-invoice">Save profile</button>
+      <button (click)="save(currentProfile)" type="button" class="btn btn-outline-secondary  new-invoice">
+        {{'common.action.save'|translate}}
+      </button>
     </div>
 </ng-template>
