--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,19 +1,19 @@
 <div class="col-lg-12">
   <div class="col-lg-12 row">
     <div class="col-lg-12" *ngIf="settings">
-      <label for="currentInvoiceNumber">Current invoice number</label>
+      <label for="currentInvoiceNumber">{{'page.settings.currentInvoiceNumber'| translate}}</label>
       <input class="form-control"  id="currentInvoiceNumber" type="number" [(ngModel)]="settings.currentInvoiceNumber">
     </div>
     <div class="col-lg-12" *ngIf="settings">
-      <label for="currentRate">Current rate</label>
+      <label for="currentRate">{{'page.settings.currentRate' | translate}}</label>
       <input  class="form-control" id="currentRate" type="number" [(ngModel)]="settings.currentRate">
     </div>
     <div class="col-lg-12" *ngIf="settings">
-      <label for="currentVatRate">Current VAT rate</label>
+      <label for="currentVatRate">{{'page.settings.currentVatRate' | translate}}</label>
       <input  class="form-control" id="currentVatRate" type="number" [(ngModel)]="settings.currentVatRate">
     </div>
     <div class="col-lg-12">
-      <button type="button" class="btn btn-outline-dark" (click)="save()">Save</button>
+      <button type="button" class="btn btn-outline-dark" (click)="save()">{{'common.action.save'|translate}}</button>
     </div>
   </div>
 
