--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,12 @@
             <button class="dropdown-item" (click)="useLanguage('fr')">
               <span class="flag-icon flag-icon-fr "></span>&nbsp;FR
             </button>
+            <button class="dropdown-item" (click)="useLanguage('nl')">
+              <span class="flag-icon flag-icon-nl"></span>&nbsp;NL
+            </button>
             <button class="dropdown-item" (click)="useLanguage('en')">
               <span class="flag-icon flag-icon-gb"></span>&nbsp;EN
             </button>
-            <!-- todo <button class="dropdown-item" (click)="useLanguage('nl')">NL</button>-->
           </div>
         </div>
       </li>
