--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,6 @@
     <p class="lead">{{'page.home.readmore'|translate}}</p>
     <hr class="my-4">
     <p>{{'page.home.getstarthere'|translate}}</p>
-    <a class="btn btn-primary btn-lg" href="/invoice" role="button">{{'page.home.getstart'|translate}}</a>
+    <a class="btn btn-primary btn-lg" routerLink="/invoice" role="button">{{'page.home.getstart'|translate}}</a>
   </div>
 </div>
