--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,11 @@
     padding-right: 0px;
     min-height: 91vh;
 }
+
+a:hover, a:active, a:focus {
+  outline: none;
+  border: 0;
+}
 .sidebar > div {
     padding-left: 0px;
     margin-top: 15px;
