--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,7 @@ a:hover, a:active, a:focus {
     padding-left: 0px;
     margin-top: 15px;
 }
+
 ul.recent > div > div {
     /*margin-top: 15px;*/
     padding-left: 15px !important;
@@ -89,3 +90,21 @@ ul.recent>li:hover {
     border-color: #dfa9b5;
     background-color: #ffd2d2;
 }*/
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  background-color: #f5f5f5;
+}
