--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,9 +80,11 @@
 </div>
 <!-- Footer -->
 <footer *ngIf="gdpr" class="footer bg-dark p-2">
-  <div class="container mt-4 ">
-    <p class="text-white lead ">{{'main.gdpr'|translate}}</p>
-    <button class="btn btn-success text-white" (click)="gdpr=false">{{'common.action.accept'|translate}}</button>&nbsp;
+  <div class="container ">
+    <p class="text-white lead text-uppercase">{{'main.gdpr'|translate}}</p>
+    <button class="btn btn-success text-uppercase text-white" (click)="gdpr=false">
+      {{'common.action.accept'|translate}}
+    </button>&nbsp;
     <a href="https://google.fr" class="btn btn-danger text-white">{{'common.action.refuse'|translate}}</a>
   </div>
 </footer>
