--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div [ngClass]="toggleNavbarShow()" id="navbarTogglerDemo01">
-    <img width="16" height="16" src="favicon.ico">
-    <a class="navbar-brand p-0" routerLink="/"
+    <a class="navbar-brand mt-sm-1 mt-md-0" routerLink="/"
        [ngStyle]="{'color': currentMenu && currentMenu.route === '/' && currentMenu.selected ? currentMenu.color:''}">
-      <i>{{'main.title' | translate}}&nbsp;</i>
+      <img width="16" height="16" class="d-sm-block d-md-inline" src="favicon.ico">
+      <i class="d-sm-none d-md-inline">{{'main.title' | translate}}</i>
     </a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-1">
       <li class="nav-item" *ngFor="let m of menu" (click)="click(m);m.selected=true;">
