fix 404 error page

--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="jumbotron">
       <h1 class="display-4">{{status}}</h1>
-      <p class="lead">{{message}}</p>
+      <p class="lead">{{message|translate}}</p>
       <hr class="my-4">
     </div>
   </div>
