--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,14 +60,14 @@
   </div>
 </nav>
 <div>
-  <div class="container-fluid routerContent"><!--
+  <div class="container-fluid routerContent">
     <div *ngIf="currentMenu" class="col-lg-12">
       <fa-icon [icon]="currentMenu.icon" class="header-icon"
                [ngStyle]="{'border-color': currentMenu.color, 'color': currentMenu.color}"></fa-icon>
       <h5>
         {{currentMenu.label | translate}}
       </h5>
-    </div>-->
+    </div>
     <router-outlet></router-outlet>
   </div>
 </div>
