--- a/src/app/data-table/data-table.component.css
+++ b/src/app/data-table/data-table.component.css
@@ -95,6 +95,7 @@
 }
 .gridHeaders > .gridRow {
     border-bottom:solid 1px #d6d6d6;
+    resize: horizontal;
 }
 .gridHeaders:hover{
     color: #636363;
