--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -30,13 +30,16 @@
 </div>
 <div class="mainGrid  mt-3">
   <div class="gridCol gridHeaders">
-      <div class="gridRow" *ngFor="let row of dataColumns" title="{{row.label | translate}}">{{row.label | translate}}</div>
+      <ng-container *ngFor="let row of dataColumns">
+        <div *ngIf="!row.hide" class="gridRow" title="{{row.label | translate}}">{{row.label | translate}}</div>
+      </ng-container>
       <div class="gridRow" *ngIf="enableConsult || enableDelete || enableEdit">&nbsp;</div>
   </div>
-  <div class="gridCol" *ngFor="let data of datas; let i=index">
-    
-    <div class="gridRow {{col.cssClass}} {{getdataclass(data,col)}}" *ngFor="let col of dataColumns" title="{{getdata(data, col) }}">{{getdata(data, col) }}</div>
 
+  <div class="gridCol" *ngFor="let data of datas; let i=index">
+    <ng-container  *ngFor="let col of dataColumns">
+      <div *ngIf="!col.hide" class="gridRow {{col.cssClass}} {{getdataclass(data,col)}}" title="{{getdata(data, col) }}">{{getdata(data, col) }}</div>
+    </ng-container>
     <div class="gridRow actions" *ngIf="enableConsult || enableDelete || enableEdit">
         <div ngbDropdown class="d-inline-block">
           <fa-icon [icon]="faEllipsisH" class="option-list-button" id="dropdown" ngbDropdownToggle></fa-icon>
@@ -56,12 +59,15 @@
           </div>
         </div>  
       </div>
-    
   </div>
-
 </div>
-<div class="table-pagination">
+<div class="col-lg-12 row" style="padding: 0; margin:0">
+  <div class="col-lg-6" style="padding:0; margin:0">
+    <span class="hidebtn" (click)="openModal(columnHide)" style="float: left;">{{'datatable.hide' | translate }}</span>
+  </div>
+  <div class="col-lg-6" style="text-align: right; padding: 0; margin: 0">
     <app-pagination [dataSource]="dataSource" (newData)="refreshGrid($event)"></app-pagination>
+  </div>
 </div>
 
 
@@ -75,3 +81,13 @@
     </div>
   <app-pagination [dataSource]="dataSource" (newData)="refreshGrid($event)"></app-pagination>
 </div>
+
+<ng-template #columnHide let-modal>
+  <h4 class="modal-title" id="modal-basic-title" style="text-align:center">{{'datatable.hide' | translate }}</h4>
+  <div class="col-lg-12 row">
+    <ng-container *ngFor="let dc of dataColumns">
+      <div class="col-lg-10"><label for="{{dc.label}}">{{dc.label | translate}}</label></div>
+      <div class="col-lg-2"><input id="{{dc.label}}" type="checkbox" [(ngModel)]="dc.hide"></div>
+    </ng-container>
+  </div>
+  </ng-template>
