--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,13 +1,10 @@
 <div class="row col-sm-12">
   <div class="container">
-    <div class="alert alert-danger col-12">
-      <p>{{label | translate}}</p>
-    </div>
     <div class="jumbotron">
-      <h1 class="display-4">{{status}}</h1>
-      <p class="lead">{{message|translate}}</p>
+      <h1 class="display-4 text-danger">{{status}} </h1>
+      <p class="lead text-danger">{{label | translate}}</p>
       <hr class="my-4">
+      <p class="lead">{{message|translate}}</p>
     </div>
   </div>
-
 </div>
